--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,14 +26,13 @@
     color: #333;
     font-family: verdana, arial, helvetica, sans-serif;
     font-size: 13px;
-    line-height: 18px;
-    margin: 33px;
+        margin: 33px;
 }
   
 h1 {
     color: rgb(51,51,51);
     font-size: 26px;
-    margin: 33px;
+    margin: 17.42px 0px;
     line-height: 18px;
     
     
@@ -42,6 +41,6 @@ h1 {
 p {
     font-size: 13px;
     margin: 33px;
-    line-height: 18px;
+   
 }
 
