--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,22 @@
 <h1>Books</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+
+<% @books.each do |book| %>
+
+  <p>タイトル</p>
+  <span><%= book.title %></span>
+  
+<% end %>
+
+
+
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+
+<h1>New book</h1>
+  <h4Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Create Book' %>
+<% end %>  
