--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   </head>
 
   <body>
-    <header>
-      <h1 class= "headline"></h1>
+    <head>
+      <h1></h1>
     </header>
     <%= yield %>
   </body>
