--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,12 @@
 <html>
   <head>
     <title>WebCampBackendNew</title>
-    <meta name="csrf-param" content="authenticity_token">
-    <meta name="csrf-token" content="/4QLhsNQU680/GKLkDyFZMaH2cHt4iBZYwi2oGtmXGngY4xpGGU37YX/4ZiYezqTv6WRg2Fp2/SqZkPphUIJhw==">
-    <%= csrf_meta_tags %>
+
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   </head>
 
   <body>
