--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,21 +2,46 @@
 
 <% @books.each do |book| %>
 
-  <p>タイトル</p>
+  <p>Title</p>
   <span><%= book.title %></span>
-  
+
+   <p>Body</p>
+  <span><%= book.body %></span>
+
+
+    <%= link_to "show", book_path(book.id) %>
+
+    <%= link_to "edit", edit_book_path(book.id) %>
+
+    <%= link_to "delete", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+
+
+
+
 <% end %>
 
 
 
+<h1>New book</h1>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+     <% @book.errors.full_message.each do |message| %>
+       <li><%= message %></li>
+     <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
-<h1>New book</h1>
-  <h4Title</h4>
+
+
+  <h4>Title</h4>
   <%= f.text_field :title %>
 
   <h4>Body</h4>
   <%= f.text_area :body %>
 
   <%= f.submit 'Create Book' %>
-<% end %>  
+<% end %>
