--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h1>Title</h1>
+  <P><%= @book.title %></P>
+
+<h2>本文</h2>
+<p><%= @book.body %></p>
+
+  <span>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
+  </span>
+  <span>
+    <%= link_to "Back", :back %>
+  </span>
