--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
 
   <body>
     <head>
+      <div class="text-success">
+  <%= flash[:notice] %>　
+</div>
+<div class="text-danger">
+  <%= flash[:alret] %>　
+</div>
       <h1></h1>
     </header>
     <%= yield %>
