--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,9 +15,6 @@
 
     <%= link_to "delete", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
 
-
-
-
 <% end %>
 
 
@@ -25,13 +22,15 @@
 <h1>New book</h1>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errors prohibited this book from being saved
   <ul>
-     <% @book.errors.full_message.each do |message| %>
+     <% @book.errors.full_messages.each do |message| %>
        <li><%= message %></li>
      <% end %>
   </ul>
 <% end %>
+
+
 
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
 
