--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -18,3 +18,10 @@
   <%= f.submit 'Update Book' %>
 <% end %>
 
+ <span>
+    <%= link_to "Show", book_path(@book.id) %>
+  </span>
+  <span>
+    <%= link_to 'Back', '/books' %>
+  </span>
+
