--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Books</h1>
+<div class="title">Books</div>
 
 <% @books.each do |book| %>
 
-  <p>Title</p>
-  <span><%= book.title %></span>
+  <p >Title</p>
+ <% table= "book.title" %>
 
-   <p>Body</p>
-  <span><%= book.body %></span>
+   <% tr><p>Body</p>
+  <%= book.body %>
 
 
     <%= link_to "show", book_path(book.id) %>
@@ -41,6 +41,6 @@
 
   <h4>Body</h4>
   <%= f.text_area :body %>
-
+　<br>
   <%= f.submit 'Create Book' %>
 <% end %>
