--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,11 @@
+ <div class="text-success">
+  <%= flash[:notice] %>
+  </div>
+
 <h1>Title</h1>
-  <P><%= @book.title %></P>
+
+
+<P><%= @book.title %></P>
 
 <h2>本文</h2>
 <p><%= @book.body %></p>
@@ -8,5 +14,5 @@
     <%= link_to "Edit", edit_book_path(@book.id) %>
   </span>
   <span>
-    <%= link_to "Back", :back %>
+    <%= link_to 'back', '/books' %>
   </span>
