--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebCampBackendNew</title>
-
+    <title>SampleAppDemo</title>
+    <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   </head>
 
   <body>
-    <head>
-      <div class="text-success">
-  <%= flash[:notice] %>　
-</div>
-<div class="text-danger">
-  <%= flash[:alret] %>　
-</div>
-      <h1></h1>
-    </header>
-    <%= yield %>
+    <main>
+     <%= yield %>
+    </main>
   </body>
-</html>
