--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 <h1>Title</h1>
 
 
-<P><%= @book.title %></P>
+<P><strong><%= @book.title %></strong></P>
 
 <h2>本文</h2>
 <p><%= @book.body %></p>
@@ -13,6 +13,7 @@
   <span>
     <%= link_to "Edit", edit_book_path(@book.id) %>
   </span>
+|
   <span>
     <%= link_to 'back', '/books' %>
   </span>
